--- a/css/main.css
+++ b/css/main.css
@@ -327,7 +327,7 @@ footer {
 }
 
 .card {
-    background: url("../img/cbg.jpg");
+    background: url("../img/cbg.png");
     color: #333;
     border-radius: 20px;
     box-sizing: border-box;
@@ -715,7 +715,7 @@ html {
 }
 
 .description_critical {
-    background: url('../img/cbg.jpg');
+    background: url('../img/cbg.png');
     color: #000;
     border-radius: 20px;
     margin-top: -20px;
@@ -742,7 +742,7 @@ html {
     width: 100%;
     margin-top: 40px;
     display: block;
-    background: url(../img/cam2.jpg);
+    background: url(../img/cam2.png);
     border-radius: 20px;
     background-size: cover;
     background-position: 0 0;
