--- a/css/main.css
+++ b/css/main.css
@@ -671,6 +671,10 @@ html {
     width: 47px
 }
 
+.card-icon-cam {
+    overflow: hidden;
+}
+
 .card-title {
     font-size: 24px;
     font-weight: 700;
