--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,243 @@
+:root {
+    --blue: #007bff;
+    --indigo: #6610f2;
+    --purple: #6f42c1;
+    --pink: #e83e8c;
+    --red: #dc3545;
+    --orange: #fd7e14;
+    --yellow: #ffc107;
+    --green: #28a745;
+    --teal: #20c997;
+    --cyan: #17a2b8;
+    --white: #fff;
+    --gray: #6c757d;
+    --gray-dark: #343a40;
+    --primary: #007bff;
+    --secondary: #6c757d;
+    --success: #28a745;
+    --info: #17a2b8;
+    --warning: #ffc107;
+    --danger: #dc3545;
+    --light: #f8f9fa;
+    --dark: #343a40;
+    --breakpoint-xs: 0;
+    --breakpoint-sm: 576px;
+    --breakpoint-md: 768px;
+    --breakpoint-lg: 992px;
+    --breakpoint-xl: 1200px;
+    --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+  }
+  
+  html {
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    overflow: scroll;
+  }
+  
+  article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
+    display: block;
+  }
+  
+  body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+    background-color: #fff;
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+  }
+  
+  p {
+    margin-top: 0;
+    margin-bottom: 1rem;
+  }
+  
+  
+  ol,
+  ul,
+  dl {
+    margin-top: 0;
+    margin-bottom: 1rem;
+  }
+  
+  a {
+    color: #007bff;
+    text-decoration: none;
+    background-color: transparent;
+  }
+  
+  a:hover {
+    color: #0056b3;
+    text-decoration: underline;
+  }
+  
+  a:not([href]):not([tabindex]) {
+    color: inherit;
+    text-decoration: none;
+  }
+  
+  img {
+    vertical-align: middle;
+    border-style: none;
+  }
+  
+  svg {
+    overflow: hidden;
+    vertical-align: middle;
+  }
+  
+  
+  button {
+    border-radius: 0;
+  }
+  
+  button:focus {
+    outline: 1px dotted;
+    outline: 5px auto -webkit-focus-ring-color;
+  }
+  
+  button,
+  select,
+  optgroup,
+  textarea {
+    margin: 0;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+  }
+  
+  button,
+  input {
+    overflow: visible;
+  }
+  
+  button,
+  select {
+    text-transform: none;
+  }
+  
+  select {
+    word-wrap: normal;
+  }
+  
+  button,
+  [type="button"],
+  [type="reset"],
+  [type="submit"] {
+    -webkit-appearance: button;
+  }
+  
+  button:not(:disabled),
+  [type="button"]:not(:disabled),
+  [type="reset"]:not(:disabled),
+  [type="submit"]:not(:disabled) {
+    cursor: pointer;
+  }
+  
+  button::-moz-focus-inner,
+  [type="button"]::-moz-focus-inner,
+  [type="reset"]::-moz-focus-inner,
+  [type="submit"]::-moz-focus-inner {
+    padding: 0;
+    border-style: none;
+  }
+  
+  h1, h2, h3, h4, h5, h6,
+  .h1, .h2, .h3, .h4, .h5, .h6 {
+    margin-bottom: 0.5rem;
+    font-weight: 500;
+    line-height: 1.2;
+  }
+  
+  h1, .h1 {
+    font-size: 2.5rem;
+  }
+  
+  h2, .h2 {
+    font-size: 2rem;
+  }
+  
+  h3, .h3 {
+    font-size: 1.75rem;
+  }
+  
+  h4, .h4 {
+    font-size: 1.5rem;
+  }
+  
+  h5, .h5 {
+    font-size: 1.25rem;
+  }
+  
+  h6, .h6 {
+    font-size: 1rem;
+  }
+  
+  .purchase-list__item + .purchase-list__item {
+    margin-top: 10px;
+  }
+  
+  .card {
+    position: relative;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border-radius: 0.25rem;
+  }
+  
+  
+  .card-title {
+    margin-bottom: 0;
+  }
+  
+  
+  header {
+    height: 93px;
+    box-sizing: border-box;
+    padding: 0 40px;
+    border-bottom: 1px solid #f0f0f0
+  }
+  
+  
+  .purchase-list {
+      padding: 0 40px;
+  }
+  
+  .purchase-list-wrap .card-description {
+      padding-bottom: 12px;
+  }
+  
+  .purchase-list__item {
+      font-size: 20px;
+      position: relative;
+  }
+  
+  .purchase-list__item::before {
+        content: '';
+        position: absolute;
+        left: -24px;
+        width: 20px;
+        height: 20px;
+        background: url("../img/checked.svg");
+  }
+  
+
 a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
     margin: 0;
     padding: 0;
@@ -30,19 +270,6 @@ ol, ul {
     list-style: none
 }
 
-blockquote, q {
-    quotes: none
-}
-
-blockquote:after, blockquote:before, q:after, q:before {
-    content: '';
-    content: none
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0
-}
 
 input[type=range] {
     -webkit-appearance: none
@@ -224,8 +451,6 @@ input[type=range]:focus::-ms-fill-upper {
 
 body, html {
     font-family: Arial;
-    padding: 0;
-    margin: 0;
     height: 100%;
     width: 100%
 }
@@ -340,13 +565,6 @@ footer {
 .critical {
     color: #fff;
     padding: 0
-}
-
-* {
-    box-sizing: border-box;
-}
-html {
-    height: 100%;
 }
 
 .card-heading {
@@ -575,96 +793,6 @@ html {
     background: rgba(255, 217, 62, 1)
 }
 
-html {
-    overflow: scroll
-}
-
-.video-wrapper {
-    min-height: 300px;
-    position: relative
-}
-
-.video {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 300px;
-    transition: all .5s ease;
-    z-index: 1;
-    -webkit-filter: brightness(100%) contrast(100%);
-    filter: brightness(100%) contrast(100%)
-}
-
-.video_active {
-    z-index: 10;
-    background: #000
-}
-
-.video-controls-wrap {
-    box-sizing: border-box;
-    padding: 40px;
-    display: block;
-    width: 100%
-}
-
-.video-controls {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 0;
-    background: rgba(255, 255, 255, .9);
-    z-index: 20;
-    overflow: hidden;
-    transition: height .5s ease
-}
-
-.video-controls_active {
-    height: 92px
-}
-
-.controls-text {
-    float: left
-}
-
-.video-control {
-    float: left
-}
-
-.video-volume {
-    background: url(../img/sound_n.png);
-    background-size: cover;
-    height: 40px;
-    width: 40px;
-    margin-left: 40px;
-    cursor: pointer
-}
-
-.video-volume_unmuted {
-    background: green;
-    background: url(../img/sound.png);
-    background-size: cover
-}
-
-.analyser {
-    position: absolute;
-    z-index: 5;
-    width: 30px;
-    height: 0;
-    bottom: 40px;
-    right: 0;
-    background: green;
-    transition: height .5s ease
-}
-
-.analyser_active {
-    position: fixed;
-    z-index: 15;
-    bottom: 40px;
-    right: 40px;
-    width: 60px
-}
 
 @media (max-width: 1230px) {
     .card_size_m {
@@ -903,13 +1031,4 @@ html {
         padding-left: 20px
     }
 
-    .card-video {
-        overflow: visible
-    }
-
-    .video-control {
-        margin-right: 100px;
-        margin-bottom: 10px;
-        margin-top: 10px
-    }
 }
